<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.emillemartins.agendinha.ConfigActivity"
    android:weightSum="1">

    <TextView
        android:text="Configurações"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/config"
        />
    <CheckBox
        android:text="@string/exibirEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox2"


        android:id="@+id/checkBox3" />

    <CheckBox
        android:text="@string/mostrarAmigos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/checkBox2"


        />

    <Button
        android:text="@string/btSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2"
        android:layout_gravity="center"
        android:id="@+id/btconfig" />
</LinearLayout>
